IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/Purchased_commodity__c.object-meta.xml
<CustomObject>
    <description>One individual item of commodities.</description>
    <label>Purchased commodity</label>
    <nameField>
        <label>Individual_purchace Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchased commodities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>