IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Bright_description__c.field-meta.xml
<CustomField>
    <fullName>Bright_description__c</fullName>
    <formula>Shop_product__r.Blurb__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bright description</label>
    <type>Text</type>
</CustomField>