IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Final_cart__c.field-meta.xml
<CustomField>
    <fullName>Final_cart__c</fullName>
    <label>Final cart</label>
    <referenceTo>Final_cart__c</referenceTo>
    <relationshipLabel>Purchased commodities</relationshipLabel>
    <relationshipName>Purchased_commodities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>