IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Individual_price__c.field-meta.xml
<CustomField>
    <fullName>Individual_price__c</fullName>
    <formula>Shop_product__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Individual price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>