IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Product_name__c.field-meta.xml
<CustomField>
    <fullName>Product_name__c</fullName>
    <formula>Shop_product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product name</label>
    <type>Text</type>
</CustomField>