IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/ProductLookup__c.field-meta.xml
<CustomField>
    <fullName>ProductLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductLookup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Purchased commodities</relationshipLabel>
    <relationshipName>Purchased_commodities</relationshipName>
    <type>Lookup</type>
</CustomField>