IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Purchace_quantity__c.field-meta.xml
<CustomField>
    <fullName>Purchace_quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Purchace quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>