IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/PurchaseID__c.field-meta.xml
<CustomField>
    <fullName>PurchaseID__c</fullName>
    <description>PurchaseID</description>
    <displayFormat>P-{00000}</displayFormat>
    <label>PurchaseID</label>
    <type>AutoNumber</type>
</CustomField>