IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Shop_product__c.field-meta.xml
<CustomField>
    <fullName>Shop_product__c</fullName>
    <label>Shop product</label>
    <referenceTo>Shop_product__c</referenceTo>
    <relationshipLabel>Purchased commodities</relationshipLabel>
    <relationshipName>Purchased_commodities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>