IntershipFirstProject/force-app/main/default/objects/Purchased_commodity__c/fields/Total_purchase_price__c.field-meta.xml
<CustomField>
    <fullName>Total_purchase_price__c</fullName>
    <formula>Shop_product__r.Price__c   *   Purchace_quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total purchase price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>